--- a/src/main/resources/templates/BlogPost/delete.html
+++ b/src/main/resources/templates/BlogPost/delete.html
@@ -6,6 +6,7 @@
     <title>Cherish's Blog Site</title>
 
     <div th:replace="/fragments/styling :: head-style"></div>
+    <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
     <div class="container">
@@ -13,13 +14,7 @@
 
       <div class="row">
         <div class="col-xl">
-          <h3>Blog Post Form</h3>
-          <p>Thank you for your submission!</p>
-
-          <h4>Blog Post</h4>
-          <p th:text="${title}" />
-          <p th:text="${author}" />
-          <p th:text="${blogEntry}" />
+          <h3>This post has been deleted.</h3>
         </div>
       </div>
 
@@ -27,9 +22,6 @@
         <div class="col-md">
           <a href="/">
             <button class="btn btn-primary">Return Home</button>
-          </a>
-          <a href="#" th:href="@{/blogposts/{id}(id=${blogPost.id})}">
-            <button class="btn btn-light">Edit This Post</button>
           </a>
           <a href="/blogposts/new">
             <button class="btn btn-secondary">Create Another Blog Post</button>
